--- a/src/app/registration/registration.component.scss
+++ b/src/app/registration/registration.component.scss
@@ -239,3 +239,8 @@ vertical-middle{
 .test{
   position: fixed;
 }
+.mat-progress-spinner {
+  margin-left: auto;
+  margin-right: auto;
+  zoom: 0.3;
+}
