--- a/src/app/registration/registration.component.html
+++ b/src/app/registration/registration.component.html
@@ -348,6 +348,7 @@
         color="primary"
         type="submit"
         class="btn-block mt-10 sticky"
+        (click)="onSubmit()" 
         [disabled]="!registrationForm.valid"
     >
         Registruotis
