--- a/src/app/student-page/student-page.component.scss
+++ b/src/app/student-page/student-page.component.scss
@@ -25,7 +25,6 @@
   font-size: 20px;
   text-align: left;
   margin-bottom: .75rem;
-  margin-top: 1rem;
 }
 
 #student-action-container button{
@@ -74,11 +73,6 @@ hr{
 }
 
 .show-more{
-  background: #6486C4;
-  height: 40px;
-  border-radius: 5px;
-  color: #fff;
-  border-color: #5D7EB8;
-  width: 13vw;
-  min-width: 150px;
+  margin: 1.5vh 0;
+  cursor: pointer;
 }
