--- a/src/app/forgot-password/forgot-password.component.html
+++ b/src/app/forgot-password/forgot-password.component.html
@@ -1,9 +1,9 @@
 <div class="login-wrapper" fxLayout="row" fxLayoutAlign="center center">
-  <button type="button" class="close float-right exit" aria-label="Close" (click)="closeDialog('login')">
+  <button type="button" class="close float-right exit" aria-label="Close" (click)="closeDialog('forgotPassword')">
     <span aria-hidden="true">&times;</span>
   </button>
   <mat-card-header>
-    <h1 class="text-center">Prisijungimas</h1>
+    <h1 class="text-center">Slaptažodžio atkurimas</h1>
   </mat-card-header>
   <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
     <mat-card-content>
@@ -22,25 +22,6 @@
           Neteisingas elektroninis paštas
         </div>
       </div>
-      <div class="form-group">
-        <label>Slaptažodis</label>
-
-        <input matInput type="password" class="form-control" formControlName="passwordLogin" maxlength="30"/>
-        <div class="align-right">
-          <button (click)="openPasswordReminder()" class="hyperlink">Pamiršau slaptažodį</button>
-        </div>
-      </div>
-      <div
-        [hidden]="loginForm.controls.passwordLogin.valid || loginForm.controls.passwordLogin.pristine"
-        class="alert alert-danger"
-      >
-        <div *ngIf="loginForm.controls.passwordLogin.errors?.required">
-          Slaptažodis yra privalomas
-        </div>
-      </div>
-      <div>
-
-      </div>
     </mat-card-content>
     <span class="align-bottom">
             <p [hidden]="isLoading">{{ this.serverErrorMessage }}</p>
@@ -52,7 +33,7 @@
               class="btn-block mt-10"
               [disabled]="!loginForm.valid"
             >
-                Prisijungti
+                Gauti laišką
             </button>
 
             <mat-progress-spinner
