--- a/src/app/registration/registration.component.html
+++ b/src/app/registration/registration.component.html
@@ -151,7 +151,7 @@
                 <label
                     >Ar bus galimybė pasirašyti trišalę praktikos sutartį, jei ne pakomentuok plačiau<span
                         #tooltip="matTooltip"
-                        matTooltip="Tai sutartis, kuri yra pasirašoma tarp tarp Tavęs, IT Akademijos ir trečiosios šalies: Tavo mokymo įstaigos (kai kurios ugdymo įstaigos trišales praktikos sutartis suteikia tik tam tikrais studijų metais)."
+                        matTooltip="Tai sutartis, kuri yra pasirašoma tarp Tavęs, IT Akademijos ir trečiosios šalies: Tavo mokymo įstaigos (kai kurios ugdymo įstaigos trišales praktikos sutartis suteikia tik tam tikrais studijų metais)."
                         class="material-icons"
                     >
                         info
