Route updatePassword added

--- a/src/app/forgot-password/forgot-password.component.html
+++ b/src/app/forgot-password/forgot-password.component.html
@@ -5,20 +5,20 @@
   <mat-card-header>
     <h1 class="text-center">Slaptažodžio atkurimas</h1>
   </mat-card-header>
-  <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+  <form [formGroup]="resetForm" (ngSubmit)="onSubmit()">
     <mat-card-content>
       <div class="form-group">
         <label>El. paštas</label>
-        <input matInput type="emailLogin" class="form-control" id="emailLogin" formControlName="emailLogin"/>
+        <input matInput type="emailReset" class="form-control" id="emailReset" formControlName="emailReset"/>
       </div>
       <div
-        [hidden]="loginForm.controls.emailLogin.valid || loginForm.controls.emailLogin.pristine"
+        [hidden]="resetForm.controls.emailReset.valid || resetForm.controls.emailReset.pristine"
         class="alert alert-danger"
       >
-        <div *ngIf="loginForm.controls.emailLogin.errors?.required">
+        <div *ngIf="resetForm.controls.emailReset.errors?.required">
           Elektroninis paštas yra privalomas
         </div>
-        <div *ngIf="loginForm.controls.emailLogin.errors?.pattern">
+        <div *ngIf="resetForm.controls.emailReset.errors?.pattern">
           Neteisingas elektroninis paštas
         </div>
       </div>
@@ -31,9 +31,9 @@
               color="primary"
               type="submit"
               class="btn-block mt-10"
-              [disabled]="!loginForm.valid"
+              [disabled]="!resetForm.valid"
             >
-                Gauti laišką
+                Patvirtinti
             </button>
 
             <mat-progress-spinner
