--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -27,7 +27,7 @@
 
         <input matInput type="password" class="form-control" formControlName="passwordLogin" maxlength="30"/>
         <div class="align-right">
-          <button (click)="openPasswordReminder()" class="hyperlink">Pamiršau slaptažodį</button>
+
         </div>
       </div>
       <div
@@ -38,9 +38,7 @@
           Slaptažodis yra privalomas
         </div>
       </div>
-      <div>
 
-      </div>
     </mat-card-content>
     <span class="align-bottom">
             <p [hidden]="isLoading">{{ this.serverErrorMessage }}</p>
@@ -54,6 +52,9 @@
             >
                 Prisijungti
             </button>
+      <div class="align-right">
+        <button (click)="openPasswordReminder()" class="hyperlink" [hidden]="isLoading">Pamiršau slaptažodį</button>
+      </div>
 
             <mat-progress-spinner
               class="spinner-styler"
