--- a/src/app/password-reset/password-reset.component.html
+++ b/src/app/password-reset/password-reset.component.html
@@ -5,7 +5,7 @@
   <h1 class="text-center">
     Slaptažodžio keitimas
   </h1>
-  <mat-dialog-content id="registration">
+  <mat-dialog-content id="passwordReset">
     <div class="login-wrapper" fxLayout="row" fxLayoutAlign="center center">
       <form [formGroup]="resetPasswordForm" (ngSubmit)="onSubmit()">
         <div class="form-group">
@@ -15,36 +15,36 @@
             type="password"
             id="password1"
             class="form-control"
-            formControlName="passwordReg"
+            formControlName="passwordReset"
             maxlength="30"
           />
         </div>
         <div
           [hidden]="
-                    (resetPasswordForm.controls.passwordReg.valid || resetPasswordForm.controls.passwordReg.pristine) &&
-                    (this.passwordRepeatReg.value === '' || this.passwordReg.value !== '')
+                    (resetPasswordForm.controls.passwordReset.valid || resetPasswordForm.controls.passwordReset.pristine) &&
+                    (this.passwordRepeatReset.value === '' || this.passwordReset.value !== '')
                 "
           class="alert alert-danger"
         >
-          <div *ngIf="resetPasswordForm.controls.passwordReg.errors?.required">
+          <div *ngIf="resetPasswordForm.controls.passwordReset.errors?.required">
             Slaptažodis yra privalomas
           </div>
-          <div *ngIf="resetPasswordForm.controls.passwordReg.hasError('hasNumber')">
+          <div *ngIf="resetPasswordForm.controls.passwordReset.hasError('hasNumber')">
             Slaptažodis privalo turėti bent vieną skaičių
           </div>
-          <div *ngIf="resetPasswordForm.controls.passwordReg.hasError('hasCapitalCase')">
+          <div *ngIf="resetPasswordForm.controls.passwordReset.hasError('hasCapitalCase')">
             Slaptažodis privalo turėti bent vieną didžiają raidę
           </div>
-          <div *ngIf="resetPasswordForm.controls.passwordReg.hasError('hasSmallCase')">
+          <div *ngIf="resetPasswordForm.controls.passwordReset.hasError('hasSmallCase')">
             Slaptažodis privalo turėti bent vieną mažąją raidę
           </div>
-          <div *ngIf="resetPasswordForm.controls.passwordReg.hasError('hasGaps')">
+          <div *ngIf="resetPasswordForm.controls.passwordReset.hasError('hasGaps')">
             Slaptažodis negali turėti tarpų
           </div>
-          <div *ngIf="resetPasswordForm.controls.passwordReg.errors?.minlength">
+          <div *ngIf="resetPasswordForm.controls.passwordReset.errors?.minlength">
             Slaptažodis privalo būti ilgesnis nei 7 simboliai
           </div>
-          <div *ngIf="resetPasswordForm.controls.passwordReg.errors?.maxlength">
+          <div *ngIf="resetPasswordForm.controls.passwordReset.errors?.maxlength">
             Slaptažodis privalo būti trumpesnis nei 30 simbolių
           </div>
         </div>
@@ -55,12 +55,12 @@
             type="password"
             id="password2"
             class="form-control"
-            formControlName="passwordRepeatReg"
+            formControlName="passwordRepeatReset"
             maxlength="30"
           />
         </div>
         <div [hidden]="validatePasswords()" class="alert alert-danger">
-          <div *ngIf="this.passwordReg.value != this.passwordRepeatReg.value">
+          <div *ngIf="this.passwordReset.value != this.passwordRepeatReset.value">
             Slaptažodžiai turi sutapti
           </div>
         </div>
