adding some minimal styling changes

--- a/src/app/forgot-password/forgot-password.component.html
+++ b/src/app/forgot-password/forgot-password.component.html
@@ -3,7 +3,7 @@
     <span aria-hidden="true">&times;</span>
   </button>
   <mat-card-header>
-    <h1 class="text-center">Slaptažodžio atkurimas</h1>
+    <h1 class="text-center">Slaptažodžio atkūrimas</h1>
   </mat-card-header>
   <form [formGroup]="resetForm" (ngSubmit)="onSubmit()">
     <mat-card-content>
