--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -53,7 +53,7 @@
                 Prisijungti
             </button>
       <div class="align-right">
-        <button (click)="openPasswordReminder()" class="hyperlink" [hidden]="isLoading">Pamiršau slaptažodį</button>
+        <button (click)="openPasswordReminder()" class="hyperlink" type="button" [hidden]="isLoading">Pamiršau slaptažodį</button>
       </div>
 
             <mat-progress-spinner
