--- a/src/app/password-reset/password-reset.component.html
+++ b/src/app/password-reset/password-reset.component.html
@@ -9,7 +9,7 @@
     <div class="login-wrapper" fxLayout="row" fxLayoutAlign="center center">
       <form [formGroup]="resetPasswordForm" (ngSubmit)="onSubmit()">
         <div class="form-group">
-          <label for="password1">Slaptažodis</label>
+          <label for="password1">Naujas slaptažodis</label>
           <input
             matInput
             type="password"
