--- a/src/app/password-reset/password-reset.component.scss
+++ b/src/app/password-reset/password-reset.component.scss
@@ -3,6 +3,9 @@
   .container-padding {
     width: 100vw;
   }
+  .content-center{
+    width: 70%;
+  }
 }
 
 @media only screen and (min-width: 1001px) {
@@ -16,6 +19,10 @@
       width: 60vw;
     }
   }
+  .content-center{
+    width: 50%;
+    padding-bottom: 20vh;
+  }
 }
   .container-padding {
     background: white;
@@ -23,21 +30,16 @@
     font-size: 16px;
     min-height: 85vh;
     box-shadow: 0px 0px 15px 0px rgba(110, 110, 110, 0.75);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
-
-
-
-
-padding-bottom{
-  padding-bottom: 30vh;
-}
-
 
 .form-control {
   border: 1px solid #6486c4;
 }
-
-vertical-middle{
-
+.content-center{
+  height: 100%;
+  margin: auto;
 }
 
