--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -1,7 +1,7 @@
 <div class="mx-auto container-padding ">
   <div class="container-image">
     <img
-      src="https://z-p3-scontent.fvno1-1.fna.fbcdn.net/v/t1.15752-9/90292967_934391043646865_725670231153836032_n.jpg?_nc_cat=110&_nc_sid=b96e70&_nc_oc=AQmkHILhaMelZsrXtXJeWSQx7Hxn3jE5YnhShMoy2s1lxp5fU77hieJYHIZHAWxFMIU&_nc_ht=z-p3-scontent.fvno1-1.fna&oh=adfdec35d689ce9840ac584ba1ec19b3&oe=5E9636DD">
+      src="https://images.pexels.com/photos/1595391/pexels-photo-1595391.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260">
   </div>
   <div>
 
@@ -27,7 +27,7 @@
           </ul>
         </div>
       </div>
-      <div class="column content content-right">
+      <div class="column content1 content-right">
         <div class="container-text">
           <p><b>Prisijunk, jeigu tu:</b></p>
 
