fixing some home page issues

--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -3,7 +3,7 @@
     <img
       src="https://images.pexels.com/photos/1595391/pexels-photo-1595391.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260">
   </div>
-  <div>
+  <div class="intro-content-container">
 
     <div class="intro-container">
       „IT Akademija“ yra dviejų dalių programa, kurią sudaro su studijomis suderinta praktika ir stažuotė mūsų IT
@@ -13,7 +13,7 @@
     </div>
 
     <div class="content-container">
-      <div class="column content content-left">
+      <div class="column">
         <div class="container-text">
           <p><b>Programos dalyviai mokosi:</b></p>
 
@@ -27,7 +27,8 @@
           </ul>
         </div>
       </div>
-      <div class="column content1 content-right">
+      <div class="divider"></div>
+      <div class="column">
         <div class="container-text">
           <p><b>Prisijunk, jeigu tu:</b></p>
 
