added messages and proper routing

--- a/src/app/password-reset/password-reset.component.html
+++ b/src/app/password-reset/password-reset.component.html
@@ -71,6 +71,7 @@
           type="submit"
           class="btn-block mt-10 sticky"
           [disabled]="!resetPasswordForm.valid"
+          [hidden]="isLoading"
         >
           Keisti slaptažodį
         </button>
