--- a/src/app/applications/applications.component.scss
+++ b/src/app/applications/applications.component.scss
@@ -50,6 +50,9 @@
   .status-padding {
     padding: .25rem;
   }
+  button{
+    width: 100%;
+  }
 }
 
 @media only screen and (max-width: 1000px) {
@@ -124,7 +127,6 @@ button {
   cursor: pointer;
   overflow: hidden;
   outline:none;
-  width: 100%;
   height: 100%;
   text-align: left;
 }
